<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btPause"
        android:layout_width="@dimen/notificationButton"
        android:layout_height="wrap_content"
        android:text="@string/btPauseName"
        android:drawableTop="@drawable/ic_action_pause"
        android:layout_margin="8dp"
        style="@style/ButtonNotification"/>

    <TextView
        android:id="@+id/timerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/timer"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btStop"
        android:layout_width="@dimen/notificationButton"
        android:layout_height="wrap_content"
        android:text="@string/btStopName"
        android:layout_margin="8dp"
        android:drawableTop="@drawable/ic_action_stop"
        style="@style/ButtonNotification"/>
</LinearLayout>